# OpenFusion

./: .gitignore  README.md
Source/: CMakeLists.txt  OpenFusion.sln
Source/OpenFusion/: OpenFusion - Original.vcxproj  OpenFusion.vcxproj  OpenFusion.vcxproj.filters
Source/OpenFusion/data/: ParametersFileFormat.txt
Source/OpenFusion/include/: BasicTypes.h  CameraAbstract.h  Constants.h  Constants.h.bak  CudaUtilities.cuh  GIPCam.h  General.h  ICP.h  MainApp.h  SoftKineticCamera.h  VolumeIntegrator.h  WriteToFile.h  cutil.h  cutil_inline_runtime.h  cutil_math.h  utilities.h
Source/OpenFusion/include/Utils/: cutil_gl_inline.h  cutil_inline.h  stopwatch_base.h  stopwatch_win.h
Source/OpenFusion/src/: CImg.h  FileSystemHelper.cpp  General.cu  ICP.cpp  MainApp.cpp  Raycaster.cu  cutil.cpp
Source/OpenFusion/src/CameraSupport/: CameraAbstract.cu  CameraFromFile.cpp  CameraHandler.cpp  CameraHandler.cu  PrimesenseCamera.cpp  PrimesenseCamera.cu  SoftKineticCamera (2).cpp  SoftKineticCamera.cpp  SoftKineticCamera.cu  SoftKineticEventHandler.cpp
Source/OpenFusion/src/CameraSupport/GIPCam/: gipCalibration.cpp  gipFile.cpp  gipFile.def
Source/include/: BasicTypes.h  CameraFromFile.h  CameraHandler.h  General.h  MainApp.h  PrimesenseCamera.h  Raycaster.h  SoftKineticCamera.h  config.h  config.h.in
Source/include/Utils/: FileSystemHelper.h  myUtils.h
Source/src/: CMakeLists.txt  General.cpp  General.cpp~  ICP.cpp  ICP.cpp~  ICP.cu  VolumeIntegrator.cu
Source/src/CameraSupport/: CMakeLists.txt  CameraAbstract.cpp  CameraAbstract.cu  CameraFromFile.cpp  CameraHandler.cpp  CameraHandler.cu  GIPCam.cpp  GIPCam.cu  PrimesenseCamera.cpp  SoftKineticCamera.cpp  SoftKineticCamera.cpp~  SoftKineticEventHandler.cpp  WriteToFile.cpp
Source/src/CameraSupport/GIPCam/: gipFile.h
Source/src/Utils/: CMakeLists.txt  FileSystemHelper.cpp  FileSystemHelper.cpp~  myUtils.cpp  myUtils.cpp~  stopwatch.cpp
Source/x64/Debug/: OpenFusion.exp
Source/x64/Release/: OpenFusion.exp
Source/x64/Release/data/: OpenNIConfig.xml
